adding div + button & footer

--- a/index.html
+++ b/index.html
@@ -26,3 +26,19 @@
     <input type="search" placeholder="" name="the_search">
   </form>
 
+    <div>
+      <button class="LeftButton" type="button" name="Recherche">Recherche Google</button>
+      <button class="RightButton" type="button" name="Recherche">J'ai de la chance</button>
+    </div>
+
+  <footer>
+    <p class="left">Publicité</p>
+    <p class="left">Entreprise</p>
+    <p class="left">À propos</p>
+    <p class="right">Utiliser Google.com</p>
+    <p class="right">Paramètres</p>
+    <p class="right">Condition</p>
+    <p class="right">Confidentialité</p>
+  </footer>
+
+</body>
