Adding png file

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
   <header>
     <button type="button" name="Connexion">Connexion</button>
-    <img src="../Images/Application.png";>
+    <img src="Application.png";>
     <p>Images</p>
     <p>Gmail</p>
   </header>
 
   <section>
-    <img class="Google" src="../Images/Google.png" ;>
+    <img class="Google" src="Google.png" ;>
   </section>
 
   <form >
