modification on picture

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
   <header>
     <button type="button" name="Connexion">Connexion</button>
-    <img src="Application.png";>
+    <img src="Application.png" alt="Application";>
     <p>Images</p>
     <p>Gmail</p>
   </header>
 
   <section>
-    <img class="Google" src="Google.png" ;>
+    <img class="Google" src="Google.png" alt="Google";>
   </section>
 
   <form >
