--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <header>
     <button type="button" name="Connexion">Connexion</button>
     <img src="Application.png" alt="Application";>
-    <p>Images</p>
-    <p>Gmail</p>
+    <a href="https://www.google.com/imghp?hl=fr">Image</a>
+    <a href="https://accounts.google.com/">Gmail</a>
   </header>
 
   <section>
