--- a/index.html
+++ b/index.html
@@ -32,13 +32,20 @@
     </div>
 
   <footer>
-    <p class="left">Publicité</p>
-    <p class="left">Entreprise</p>
-    <p class="left">À propos</p>
-    <p class="right">Utiliser Google.com</p>
-    <p class="right">Paramètres</p>
-    <p class="right">Condition</p>
-    <p class="right">Confidentialité</p>
+
+    <article class="left">
+      <p class="pLeft">Publicité</p>
+      <p class="pLeft">Entreprise</p>
+      <p class="pLeft"> À propos</p>
+    </article>
+
+    <article class="right">
+      <p class="pRight">Confidentialité</p>
+      <p class="pRight">Conditions</p>
+      <p class="pRight">Paramètres</p>
+      <p class="pRight">Utiliser Google.com</p>
+    </article>
+
   </footer>
 
 </body>
